@@ -86,6 +86,7 @@ Engine fixes:
 * Fixed case where stash tabs could be switched while dragging an item.
 * The "Play Game" button on the title screen now goes directly to character creation if no saved games exist.
 * Statbars (including the enemy HP bar) now position the numeric text relative to the fill graphics.
+* Fixed the height calculation of the NPC dialog text box with several actions/topics.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
